$Id$

You are looking at a CVS snapshot of the REL_1_2 branch.

Version 1.2-b1 (?? ??? 2007)
 - Add option to include iCalendar attachment to reminder emails
 - Apply PATCH [ 1878056 ] Call toggle_datefields() JavaScript function with onClick
 - Apply PATCH [ 1894150 ] corrections to 'translations/Italian.txt'
 - Fix bug [ 1844751 ] Events on Sundays not displayed in DayByTime view
   (thanks neufeind)
 - Fix bug [ 1882034 ] weekly repeat not showing in first week of some months
   (thanks neufeind)
 - Apply patch [ 1895173 ] Fix for reminder-format
 - Fix bug [ 1893997 ] iCal export from Outlook over https (thanks neufeind)
 - Fix bug: not auth for certain events where public is participant
 - Fix bug: 'Remote Calendar' menu link not brining up correct tab on page
 - Fix bug: single quote in nonuser name causes JS error
 - Fix bug [ 1851371 ] Notification not sent on description change
 - Fix bug [ 1839882 ] help/guide pages blocked (non auth)
 - Fix bug [ 1851209 ] advanced search doesn't show on public calendar
 - Fix bug [ 1814525 ] Repeating event deletion
 - Apply PATCH [ 1802793 ] iCS export - LDAP - Empty Attendee's info
 - Security fix 1826571: misc XSS issues
 - Fix bug [ 1881030 ] date-format wrong in month.php
 - Modified iCalendar output to correct ATTENDEE output to conform to
   RFC2445; fixed attendee to user login if no fullname info available.
 - Modified iCalendar output to avoid bug in Sunbird 0.7.
 - Fix bug [ 1851220 ] cannot enter multiple categories.. only first one is kept
 - Added new rss_unapproved.php that will generate RSS 2.0 listing
   of unapproved events.
 - Apply PATCH [ 1878014 ] Fix selectDate() JavaScript function
 - Security fix: Better cleansing of search.php 'adv' parameter
 - Security fix: do not allow certain HTML tags in event descriptions
   such as SCRIPT, META, LINK, OBJECT, APPLET and others.
 - Fixes to icalclient.php: include translate.php sooner
 - Apply PATCH [ 1836703 ] a few corrections to Italian.txt